# app_bf/Controllers/CategoriesController.cs
@@ -1,0 +1,130 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Threading.Tasks;
+using Microsoft.AspNetCore.Http;
+using Microsoft.AspNetCore.Mvc;
+using Microsoft.EntityFrameworkCore;
+using app.Models;
+using NuGet.Common;
+using app.Service;
+
+namespace app.Controllers
+{
+    [Route("api/v1/category")]
+    [ApiController]
+    public class CategoriesController : ControllerBase
+    {
+        private readonly EasyPublishingContext _context;
+        private MsgService _msgService = new MsgService();
+        public CategoriesController(EasyPublishingContext context)
+        {
+            _context = context;
+        }
+
+        // GET: api/Categories
+        [HttpGet]
+        public async Task<ActionResult> GetCategories()
+        {
+            var cate = await _context.Categories
+                .Include(c=>c.Stories)
+                .Select(c => new
+                {
+                    c.CategoryId,
+                    c.CategoryName,
+                    StoriesNumber = c.Stories.Count,
+                })
+                .ToListAsync();
+            return _msgService.MsgReturn("Categories successfully", cate);
+        }
+
+        //// GET: api/Categories/5
+        //[HttpGet("{id}")]
+        //public async Task<ActionResult<Category>> GetCategory(int id)
+        //{
+        //    if (_context.Categories == null)
+        //    {
+        //        return NotFound();
+        //    }
+        //    var category = await _context.Categories.FindAsync(id);
+
+        //    if (category == null)
+        //    {
+        //        return NotFound();
+        //    }
+
+        //    return category;
+        //}
+
+        //// PUT: api/Categories/5
+        //// To protect from overposting attacks, see https://go.microsoft.com/fwlink/?linkid=2123754
+        //[HttpPut("{id}")]
+        //public async Task<IActionResult> PutCategory(int id, Category category)
+        //{
+        //    if (id != category.CategoryId)
+        //    {
+        //        return BadRequest();
+        //    }
+
+        //    _context.Entry(category).State = EntityState.Modified;
+
+        //    try
+        //    {
+        //        await _context.SaveChangesAsync();
+        //    }
+        //    catch (DbUpdateConcurrencyException)
+        //    {
+        //        if (!CategoryExists(id))
+        //        {
+        //            return NotFound();
+        //        }
+        //        else
+        //        {
+        //            throw;
+        //        }
+        //    }
+
+        //    return NoContent();
+        //}
+
+        //// POST: api/Categories
+        //// To protect from overposting attacks, see https://go.microsoft.com/fwlink/?linkid=2123754
+        //[HttpPost]
+        //public async Task<ActionResult<Category>> PostCategory(Category category)
+        //{
+        //    if (_context.Categories == null)
+        //    {
+        //        return Problem("Entity set 'EasyPublishingContext.Categories'  is null.");
+        //    }
+        //    _context.Categories.Add(category);
+        //    await _context.SaveChangesAsync();
+
+        //    return CreatedAtAction("GetCategory", new { id = category.CategoryId }, category);
+        //}
+
+        //// DELETE: api/Categories/5
+        //[HttpDelete("{id}")]
+        //public async Task<IActionResult> DeleteCategory(int id)
+        //{
+        //    if (_context.Categories == null)
+        //    {
+        //        return NotFound();
+        //    }
+        //    var category = await _context.Categories.FindAsync(id);
+        //    if (category == null)
+        //    {
+        //        return NotFound();
+        //    }
+
+        //    _context.Categories.Remove(category);
+        //    await _context.SaveChangesAsync();
+
+        //    return NoContent();
+        //}
+
+        //private bool CategoryExists(int id)
+        //{
+        //    return (_context.Categories?.Any(e => e.CategoryId == id)).GetValueOrDefault();
+        //}
+    }
+}
